Fix stabilized style of categories buttons for calendar view #145
Fix overlaps and loss of style in categories buttons filters for calendar views.

--- a/media/css/calendar.css
+++ b/media/css/calendar.css
@@ -212,9 +212,8 @@ div#jem .eventtitle {
 
 #jlcalendarlegend .calendarButtons {
 	margin-top:8px;
-	margin-left:2px;
 	margin-bottom:4px;
-	height:30px;
+	height:50px;
 }
 
 #jlcalendarlegend .calendarButtonsToggle{
@@ -228,15 +227,13 @@ div#jem .eventtitle {
 
 #jlcalendarlegend .eventCat {
 	float: left;
-	
 	cursor: pointer;
 	box-shadow: 2px 2px 2px #888888;
-	/* padding: 1px 5px;
-	border: 1px solid black;
-	margin-left:4px;
-	margin-right:4px;
-	margin-bottom:6px;
-	line-height:20px; */
+	padding: 2px 10px;
+	border: 1px solid black;	
+	margin-right:5px;
+	margin-bottom:5px;
+	line-height:40px; 
 }
 
 #jlcalendarlegend .legendb {
@@ -376,6 +373,8 @@ div#jem td {
 	display: inline-block;
 	text-align: center;
 	color: rgba(0,0,0,1);
+	margin-right: 5px;
+	box-shadow: 2px 2px 2px #888888;
 }
 
 .calendarButton:hover {
